--- a/guides/writing-tests/running-and-configuring-tests.mdx
+++ b/guides/writing-tests/running-and-configuring-tests.mdx
@@ -1,252 +1,232 @@
 ---
-title: "Running and Configuring Tests in Different Environments"
-description: "Shows how to execute tests on various platforms, use command-line options, and set up test discovery and filtering for scalable test automation."
+title: "Running and Configuring Test Suites"
+description: "A practical guide to running tests with different configurations—such as filtering, ordering, and parallel execution—using GoogleTest command-line options. Discusses test discovery and output customization."
 ---
 
-# Running and Configuring Tests in Different Environments
+# Running and Configuring Test Suites
 
-## Overview
-
-GoogleTest is designed for flexible and scalable test execution across diverse platforms and environments. This guide shows you how to run your tests on various platforms, leverage command-line options for customization, and set up robust test discovery and filtering strategies. These capabilities enable you to automate tests efficiently in environments ranging from local development machines to large-scale continuous integration systems.
-
----
-
-## Prerequisites
-
-- GoogleTest and GoogleMock installed and properly linked in your project (see Installation Methods).
-- Test binaries built and ready to run.
-- Familiarity with basic GoogleTest test writing and execution (see GoogleTest Primer and Getting Started guides).
+GoogleTest offers powerful options for running tests with customized configurations. This guide walks you through practical methods to run tests selectively, control their order, enable parallel execution, and customize outputs—all via command-line flags. Understanding these options lets you efficiently manage test execution workflows tailored to your development needs.
 
 ---
 
-## Expected Outcome
+## Workflow Overview
 
-By following the steps in this guide, you will be able to:
-
-- Run tests seamlessly on multiple platforms with appropriate initialization.
-- Use command-line flags to control test behavior, including selection, filtering, and output verbosity.
-- Manage test discovery to efficiently scale automated testing.
-- Integrate test runs into scripts or CI workflows with predictable and consistent results.
-
----
-
-## Time Estimate
-
-Expect to spend around 15–30 minutes to absorb this guide and try basic runs on your system.
+- **Task Description**: Learn how to run GoogleTest test suites with various configurations, including filtering specific tests, setting execution order, running tests concurrently, and adjusting output verbosity and format.
+- **Prerequisites**: A compiled test executable containing GoogleTest tests, and a command-line environment for running tests.
+- **Expected Outcome**: Ability to execute tests flexibly to accelerate debugging, integration, and continuous testing with meaningful reports.
+- **Time Estimate**: 10-20 minutes to familiarize and apply filtering, ordering, and output customization.
+- **Difficulty Level**: Beginner to intermediate.
 
 ---
 
-## Difficulty Level
+## Step-by-Step Instructions
 
-Intermediate – assumes familiarity with C++ and basic unit testing concepts.
+### 1. Running All Tests by Default
 
----
-
-## Running Tests Across Platforms
-
-### 1. Automated Main Function
-
-If you link with the `gmock_main` target or the equivalent GoogleTest main library, the test executable includes a built-in `main()` function that:
-
-- Initializes GoogleMock and GoogleTest.
-- Parses command-line arguments.
-- Runs all registered tests.
-
-Example output on invoking your test binary:
-
-```shell
-Running main() from gmock_main.cc
-[==========] Running X tests from Y test suites.
-...
-[  PASSED  ] All tests passed.
-```
-
-### 2. Writing Your Own `main()`
-
-If you choose or require a custom entry point, implement `main()` as follows:
-
-```cpp
-#include <gmock/gmock.h>
-
-int main(int argc, char **argv) {
-  testing::InitGoogleMock(&argc, argv);  // Initializes GoogleMock and GoogleTest
-  return RUN_ALL_TESTS();                // Runs all tests and returns result
-}
-```
-
-> **Tip:** Calling `testing::InitGoogleMock()` handles both GoogleMock and GoogleTest initialization and command-line flag parsing.
-
-
----
-
-## Command-Line Options for Test Configuration
-
-GoogleTest supports rich command-line flags for configuring test runs. You can pass these flags to any test binary to filter, list, or control test execution.
-
-### Common Flags
-
-| Flag                     | Description                                                                                   |
-|--------------------------|-----------------------------------------------------------------------------------------------|
-| `--gtest_filter=pattern` | Specifies which tests to run by matching test suite and test names (supports wildcards).       |
-| `--gtest_repeat=N`       | Repeats the entire test suite N times. Useful for detecting flaky tests.                      |
-| `--gtest_shuffle`        | Runs tests in random order to detect inter-test dependencies.                                |
-| `--gtest_random_seed=SEED` | Specify the seed for test shuffling (default is random).                                     |
-| `--gtest_output=xml[:path]` | Generates an XML report file for automated reporting. Defaults to `test_details.xml`.         |
-| `--gtest_list_tests`     | Lists all available tests without running them.                                              |
-| `--gmock_verbose=LEVEL`  | Controls the verbosity of gMock output: `info`, `warning` (default), or `error`.              |
-
-### Filtering Tests
-
-To run only selected tests, use `--gtest_filter` with the pattern:
-
-```
---gtest_filter=TestSuiteName.TestName
---gtest_filter=TestSuiteName.*
---gtest_filter=-TestSuiteName.UnwantedTest
-```
-
-You can use multiple patterns separated by `:` to include multiple tests.
-
-
----
-
-## Test Discovery
-
-GoogleTest automatically discovers all tests defined using the `TEST()`, `TEST_F()`, and `TEST_P()` macros in the linked binary.
-
-Key points:
-
-- No manual test registration is necessary.
-- `RUN_ALL_TESTS()` runs all discovered tests.
-- Use `--gtest_list_tests` to preview all discovered tests.
-
----
-
-## Running Tests in Different Environments
-
-### Local Development
-
-Run tests interactively or via scripts:
+Simply run your test binary without any arguments:
 
 ```bash
-./my_tests --gtest_filter=MySuite.*
+./my_test_executable
 ```
 
-Use debugger integration (e.g., with IDEs) by setting breakpoints in tests and running under the debugger.
+This runs all registered tests discovered in the executable.
+
+#### Expected Result
+All test suites and tests execute sequentially, with detailed output on pass/failure status.
 
 ---
 
-### Continuous Integration
+### 2. Filtering Tests to Run Specific Subsets
 
-- Use test filtering with `--gtest_filter` to selectively run tests.
-- Generate XML output with `--gtest_output=xml` for CI reporting.
-- Combine with `--gtest_repeat` and `--gtest_shuffle` for robustness.
+When your test suite is large, run a targeted subset using the `--gtest_filter` flag.
+
+- **Syntax:**
+  ```
+  --gtest_filter=PositivePattern[-NegativePattern]
+  ```
+- **PositivePattern:** globs specifying which tests to include.
+- **NegativePattern:** (optional) globs specifying tests to exclude.
+
+**Example:**
+
+To run all tests in `FactorialTest` except those named `HandlesZeroInput`:
+
+```bash
+./my_test_executable --gtest_filter=FactorialTest.*-*.HandlesZeroInput
+```
+
+**Tips:**
+- Use `*` wildcard for partial matches.
+- Separate multiple patterns by colon `:`.
+
+#### Expected Result
+Only tests matching the filter run.
 
 ---
 
-### Embedded Systems / Special Platforms
+### 3. Controlling Test Execution Order
 
-- If your platform lacks CLI support (e.g., Arduino), use appropriate `InitGoogleMock()` function without arguments and adapt running tests in the platform's main loop.
+By default, GoogleTest runs tests in the order of their registration, which usually follows source file ordering.
 
-Example for some embedded platforms:
+- **Shuffle Tests:** Use `--gtest_shuffle` to randomize test execution order.
 
-```cpp
-void setup() {
-  testing::InitGoogleMock();
-}
+```bash
+./my_test_executable --gtest_shuffle
+```
 
-void loop() {
-  RUN_ALL_TESTS();
-}
+- **Repeat Tests:** Use `--gtest_repeat=N` to run tests multiple times (helpful for detecting flaky tests).
+
+```bash
+./my_test_executable --gtest_repeat=10
+```
+
+- **Seed for Shuffle:** Control shuffling repeatability with `--gtest_random_seed=N`.
+
+```bash
+./my_test_executable --gtest_shuffle --gtest_random_seed=12345
+```
+
+#### Expected Result
+Tests run in randomized order, with optional repeats to increase test robustness.
+
+---
+
+### 4. Running Tests in Parallel
+
+GoogleTest itself doesn’t provide built-in parallel runtime.
+
+However, external test runners, build systems (like Bazel, CTest, or CI servers), or custom scripts can run multiple processes of the test executable in parallel with appropriately divided filters.
+
+**Recommendation:**
+Structure tests to be independent and side-effect free to enable safe parallel execution.
+
+---
+
+### 5. Customizing Output Format
+
+GoogleTest supports multiple output formats to integrate results with different tools.
+
+- **Default Output:** Human-readable text on the console.
+
+- **XML Output:** Useful for CI systems.
+
+```bash
+./my_test_executable --gtest_output=xml[:path]
+```
+
+If no path is specified, it defaults to `test_detail.xml` in the current directory.
+
+- **JSON Output:** (Available in recent versions)
+
+```bash
+./my_test_executable --gtest_output=json[:path]
+```
+
+- **Combining Output and Filtering:**
+
+```bash
+./my_test_executable --gtest_filter=MySuite.* --gtest_output=xml:results.xml
+```
+
+#### Tips:
+- Use XML output for integrating with Jenkins, TeamCity, or other CI tools.
+- JSON output can be parsed for custom dashboards or reporting.
+
+---
+
+### 6. Verbosity and Silent Modes
+
+Modify verbosity to suit your needs:
+
+- `--gtest_brief` reduces output to summaries per test suite.
+- `--gtest_print_time=0` disables time output.
+
+```bash
+./my_test_executable --gtest_brief --gtest_print_time=0
 ```
 
 ---
 
-## Troubleshooting Common Issues
+### 7. Listing Available Tests Without Running
 
-### Tests Not Running or Skipping
+To see all tests registered in your executable, run:
 
-- Ensure `RUN_ALL_TESTS()` is called after initialization.
-- Verify test definitions are linked into the binary.
+```bash
+./my_test_executable --gtest_list_tests
+```
 
-### No Output or Unexpected Output
-
-- Use `--gtest_verbose=info` or `--gmock_verbose=info` to get detailed logs.
-- Confirm no conflicting flag is suppressing output.
-
-### Unrecognized Test Filters
-
-- Check syntax of `--gtest_filter` patterns.
-- Use `--gtest_list_tests` to verify test names.
-
-### Tests Failing Due to Environment
-
-- Confirm environment matches build platform.
-- Make sure dependencies (database, file system) are set up or mocked.
+This prints all test suites and tests available, helping you build filters or verify test registration.
 
 ---
 
-## Best Practices and Tips
+## Practical Example
 
-- **Use Filtering:** Run only relevant tests locally to save time.
-- **Enable Repeat and Shuffle:** To uncover flaky tests.
-- **Generate XML Reports:** For integration with CI tools and dashboards.
-- **Keep Initialization Consistent:** Always use `testing::InitGoogleMock()` for consistent setup.
-- **Leverage Verbose Logging:** When diagnosing failing or unexpected tests.
+Suppose you have a large test executable and want to:
+
+- Run all tests in the `FactorialTest` suite except those with `HandlesZeroInput`.
+- Run tests three times.
+- Output results in XML format.
+- Shuffle tests with a fixed seed.
+
+You would run:
+
+```bash
+./my_test_executable --gtest_filter=FactorialTest.*-*.HandlesZeroInput --gtest_repeat=3 --gtest_output=xml --gtest_shuffle --gtest_random_seed=42
+```
+
+Verify the XML report at `test_detail.xml` for result summaries.
+
+---
+
+## Troubleshooting & Tips
+
+<AccordionGroup title="Troubleshooting Common Issues">
+<Accordion title="Tests Not Running When Filtered">
+Make sure your filter syntax is correct. Remember to separate positive and negative patterns with a hyphen `-`. Use `--gtest_list_tests` to confirm test names.
+</Accordion>
+<Accordion title="Output XML File Not Generated">
+Verify write permissions in the target directory. Confirm the `--gtest_output` flag is properly formatted.
+</Accordion>
+<Accordion title="Tests Seem to Run Twice or More">
+Check if `--gtest_repeat` is set unintentionally or if your test runner calls the executable multiple times.
+</Accordion>
+<Accordion title="Tests Fail Non-Deterministically in Shuffle Mode">
+Ensure test independence. Flaky tests often indicate hidden dependencies or shared mutable state.
+</Accordion>
+</AccordionGroup>
+
+<Tip>
+Use `--gtest_help` to get a full list of test execution flags available.
+</Tip>
+
+<Tip>
+Combine filtering with your build system or CI pipeline to run only relevant test subsets on code changes, reducing feedback time.
+</Tip>
 
 ---
 
 ## Next Steps & Related Content
 
-- **Writing & Running Your First Test:** Guide to create tests from scratch.
-- **Mocking for Dummies & Cookbook:** Learn how to use mocks effectively.
-- **Test Discovery & Execution Flow:** Understand detailed test execution lifecycle.
-- **Troubleshooting Common Issues:** Detailed help with errors and warnings.
-
-## References
-
-- [GoogleTest Primer](../getting-started/primer.md)
-- [Mocking with gMock](../guides/mocking-best-practices/creating-mocks.md)
-- [gMock for Dummies](../docs/gmock_for_dummies.md)
-- [Mocking Reference](../docs/reference/mocking.md)
+- Explore the [Getting Started: Writing Your First Test](https://google.github.io/googletest/primer.html) guide to understand how tests are created and registered.
+- Read [Using Assertions Effectively](https://google.github.io/googletest/guides/advanced-assertions.html) to master handling test results.
+- For mock-based testing, visit [Mocking Interfaces with GoogleMock](https://google.github.io/googletest/gmock_for_dummies.html).
+- See the [Integration and Environment Setup](https://google.github.io/googletest/guides/integration.html) guides for advanced test execution scenarios.
 
 ---
 
-## Summary Diagram of Test Execution Flow
+# Appendix: Common GoogleTest Flags
 
-```mermaid
-flowchart TD
-  Start([Start]) --> Init["Call InitGoogleMock()"]
-  Init --> ParseFlags["Parse Command-line Flags"]
-  ParseFlags --> Discover["Test Discovery: Locate all TEST/TEST_F/TEST_P"]
-  Discover --> RunTests["Run All Tests via RUN_ALL_TESTS()"]
-
-  RunTests --> CheckFailures{Tests Passed?}
-  CheckFailures -->|Yes| End([Exit with 0])
-  CheckFailures -->|No| EndFail([Exit with 1])
-```
-
-Use this flow to understand how your test binary processes inputs and executes tests.
+| Flag                        | Description                                       |
+|-----------------------------|-------------------------------------------------|
+| `--gtest_filter=`           | Selectively run tests by name patterns           |
+| `--gtest_repeat=`           | Run all tests multiple times                      |
+| `--gtest_shuffle`           | Run tests in random order                         |
+| `--gtest_random_seed=`      | Seed for shuffling                               |
+| `--gtest_output=`           | Specify output format and file (e.g., XML)       |
+| `--gtest_list_tests`        | List all tests without running                   |
+| `--gtest_brief`             | Output summary instead of detailed test results |
+| `--gtest_print_time=`       | Control whether to print timing per test         |
 
 ---
 
-## Additional Notes
-
-- GoogleTest supports a broad range of environments and platforms, including Linux, Windows, macOS, embedded systems, and more.
-- GoogleMock integrates seamlessly, allowing complex mocking and expectation management while running tests.
-- The rich set of command-line options and filters ensures you can customize runs to suit your development and CI needs.
-
-<Tip>
-For maximum productivity, automate your test runs with scripts that take advantage of filtering, repetition, and output options to reduce manual overhead and catch issues early.
-</Tip>
-
-
----
-
-## Example Command to Run Selected Tests Repeatedly and Shuffle
-
-```bash
-./my_test_binary --gtest_filter=MyTestSuite.* --gtest_repeat=10 --gtest_shuffle --gtest_random_seed=12345 --gtest_output=xml:report.xml
-```
-
-This command runs all tests in `MyTestSuite` 10 times each, shuffles test order with a fixed seed for reproducibility, and outputs results in XML format.
+This guide ensures you have hands-on, actionable knowledge to run your GoogleTest test suites efficiently with confidence and control.
