--- a/concepts/core-architecture/test-discovery-lifecycle.mdx
+++ b/concepts/core-architecture/test-discovery-lifecycle.mdx
@@ -1,268 +1,259 @@
 ---
-title: "Test Discovery and Execution Lifecycle"
-description: "Learn how GoogleTest and GoogleMock detect, register, and execute tests from start to finish. This page demystifies the automation behind test detection, the registration mechanisms, and the flow of control during test running—empowering users to understand what happens behind a simple test macro invocation."
+title: "Test Discovery and Lifecycle"
+description: "Explore how GoogleTest discovers and registers tests automatically, manages the lifecycle from setup to teardown, and leverages the xUnit pattern for structured C++ testing. Learn how test cases and suites are mapped, ensuring comprehensive, maintainable test coverage."
 ---
 
-# Test Discovery and Execution Lifecycle
+# Test Discovery and Lifecycle
 
-GoogleTest and GoogleMock simplify the process of writing and running tests in C++. Behind the familiar `TEST` and `TEST_F` macros lies a robust automation engine that detects, registers, and executes tests systematically. This guide unpacks that lifecycle from the moment a test macro is invoked to the final reporting of results, enabling you to confidently understand and customize the flow of your test execution.
-
----
-
-## 1. Test Discovery: How GoogleTest Finds Your Tests
-
-Every test you write using GoogleTest macros—be it `TEST`, `TEST_F`, `TEST_P`, or typed test macros—is automatically discovered through a static registration mechanism.
-
-### How Static Registration Works
-
-- When you use a test macro, it creates a unique `TestInfo` object.
-- This object includes metadata: suite name, test name, source location, parameter info (if any), and a factory to create the test fixture.
-- During static initialization (before `main()`), each `TestInfo` registers itself with the singleton `UnitTest` instance through the internal `MakeAndRegisterTestInfo()` function.
-
-This automatic registration means all tests are known to GoogleTest _before_ runtime, requiring no user intervention to "list" or "register" tests explicitly.
-
-### Test Suites and TestInfo
-
-- Tests are grouped into `TestSuite` objects, each containing multiple `TestInfo` instances.
-- Each `TestSuite` corresponds to the test suite name in your test macros.
-- The `TestSuite` maintains fixture-level setup and teardown callbacks invoked once for the entire suite.
-
-<Tip>
-Each `TestInfo` embodies a single test. Its registration connects you to GoogleTest's powerful reflection and filtering capabilities.
-</Tip>
+GoogleTest is designed to simplify C++ testing by automating the discovery and management of tests throughout their lifecycle. This guide uncovers how GoogleTest automatically locates your test cases, organizes them into suites, controls their execution, and ensures an orderly flow from setup to teardown. Understanding this core mechanism allows you to write maintainable, effective tests that fit naturally within the xUnit testing framework pattern.
 
 ---
 
-## 2. Test Registration Internals
+## Automatic Test Discovery
 
-Behind the scenes, actual test registration is powered by templated factory patterns and runtime checks ensuring accurate test fixture consistency.
+### How GoogleTest Finds Your Tests
 
-### Registration Process
+GoogleTest eliminates manual test registration. Instead, tests defined using the `TEST()` and `TEST_F()` macros are automatically discovered at runtime thanks to internal registration mechanisms.
 
-- The `RegisterTest()` template function accepts the suite and test names, parameter info, source location, and a factory creating the test object.
-- It verifies that all tests in the same test suite share the same fixture class, preventing mixing of incompatible tests.
-- The `TestInfo` constructor owned by GoogleTest stores the factory.
-- `TestSuite` instances are collected and maintained in a vector inside the `UnitTest` singleton.
+- When you write a test using `TEST(TestSuiteName, TestName)`, GoogleTest registers this test with the framework during static initialization.
+- This registration includes metadata such as the test suite name, test name, and pointers to the test code.
+- At runtime, GoogleTest queries this registry to build a full list of test suites and tests available to run.
 
-### Ensuring Fixture Consistency
+### Benefits of Automatic Discovery
 
-GoogleTest enforces that all tests within a test suite use the same fixture class. This avoids unexpected behaviors when tests are mixed from different sources but given identical suite names.
+- You never need to enumerate tests or maintain a list manually.
+- Tests scattered across multiple files and modules are aggregated seamlessly.
+- The framework enables filtering of tests by name or suite via command-line flags.
 
-<Warning>
-Mixing test fixture classes under the same suite name causes runtime errors. Use distinct test suite names or share the exact fixture class to resolve this.
-</Warning>
-
----
-
-## 3. Test Execution Lifecycle
-
-Calling `RUN_ALL_TESTS()` starts a highly orchestrated process that runs all registered tests with lifecycle awareness and user-friendly reporting.
-
-### Step 1: Preparation and Setup
-
-- `UnitTest::Run()` is invoked (usually inside `RUN_ALL_TESTS()`).
-- Tests are filtered based on user flags (e.g., `--gtest_filter`) and environment settings (e.g., test sharding).
-- Global test environments (`testing::Environment`) are set up in registration order.
-- Test suites are randomized if `--gtest_shuffle` is enabled.
-
-### Step 2: Running Test Suites
-
-- Each `TestSuite`'s `SetUpTestSuite()` is called to prepare shared resources.
-- Based on filtering and flags, each registered test (`TestInfo`) within the suite is run unless skipped or disabled.
-- Within each test:
-  - A test fixture object is created dynamically using the registered factory.
-  - Fixture-level `SetUp()` is called.
-  - Test logic runs inside `TestBody()` provided by the user macro or subclass.
-  - Fixture-level `TearDown()` is called.
-- The framework catches exceptions if configured to do so, translating them into failures without aborting the program.
-
-### Step 3: TearDown and Cleanup
-
-- After all tests in the suite run, `TearDownTestSuite()` is called.
-- Global environments (`Environment`) are torn down in the reverse order of setup.
-- Test event listeners are notified throughout this process to support customized logging or output.
-
-<Tip>
-Test execution is fully customizable through flags like `--gtest_repeat`, `--gtest_fail_fast`, and `--gtest_shuffle` to repeat, stop on failure, or randomize order.
-</Tip>
+<Info>
+Tip: Use meaningful and consistent `TestSuiteName` and `TestName` identifiers. This improves test discovery by humans and tooling, and leverages GoogleTest’s filtering capabilities effectively.
+</Info>
 
 ---
 
-## 4. Filtering and Sharding
+## Test Suites and Test Cases
 
-GoogleTest provides powerful mechanisms to control which tests run:
+### Understanding the Terminology
 
-### Name-based Filtering
+GoogleTest’s naming conventions have evolved but generally align with xUnit nomenclature:
 
-- The `--gtest_filter` flag supports positive and negative glob patterns to include or exclude tests.
-- Test names are matched as `<TestSuiteName>.<TestName>`.
-- Disabled tests (names prefixed with `DISABLED_`) are excluded by default unless the `--gtest_also_run_disabled_tests` flag is set.
+- **Test Case** (legacy term) and **Test Suite** (preferred modern term) refer to a collection of related tests.
+- A **Test** is an individual unit of verification that exercises some code path or function behavior.
 
-### Test Sharding
+Example:
 
-- Environment variables `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX` enable dividing tests across multiple machines or processes.
-- GoogleTest picks tests deterministically based on their order in the total set to assign them to shards.
-- This allows parallel execution and faster test throughput.
+```cpp
+TEST(MathTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
 
----
+TEST(MathTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+}
+```
 
-## 5. Event Listeners and Reporting
+The above defines two tests in the `MathTest` test suite.
 
-GoogleTest emits detailed events through the `TestEventListener` interface during the test program.
+### Structuring Tests with Fixtures
 
-### Event Flow
+Use `TEST_F()` when multiple tests share the same setup and teardown logic:
 
-Listeners receive notifications in this order:
+```cpp
+class QueueTest : public ::testing::Test {
+ protected:
+  void SetUp() override {
+    // Initialize shared state
+  }
+  void TearDown() override {
+    // Cleanup code
+  }
 
-1. Program start
-2. Each test iteration begins
-3. Environment setup starts and ends
-4. For each TestSuite:
-   - Suite start
-   - Each TestInfo start
-   - Test part results (assertions)
-   - Test end
-   - Suite end
-5. Environment teardown starts and ends
-6. Test iteration end
-7. Program end
+  Queue<int> queue_;
+};
 
-### Default Listeners
+TEST_F(QueueTest, IsEmptyInitially) {
+  EXPECT_EQ(queue_.size(), 0);
+}
 
-- The default console printer displays colored logs of test starts, assertions, and results.
-- XML and JSON listeners output machine-readable reports based on flags.
+TEST_F(QueueTest, EnqueueAddsElements) {
+  queue_.Enqueue(5);
+  EXPECT_EQ(queue_.size(), 1);
+}
+```
 
-### Custom Listeners
-
-Users can append custom listeners to hook into or replace output for integration with CI pipelines or IDEs.
-
----
-
-## 6. Behind the Macros: Flow of Control
-
-When you invoke `TEST(FooTest, Bar)`, here is the flow behind it:
-
-1. The macro expands to create a subclass of `testing::Test` named `FooTest_Bar_Test`.
-2. A static registration object is created that calls `RegisterTest("FooTest", "Bar", ...)`.
-3. The factory stored can produce instances of `FooTest_Bar_Test`.
-4. `RUN_ALL_TESTS()` calls `UnitTest::Run()` which gathers all tests.
-5. For each test:
-   - The test fixture object is created.
-   - GoogleTest calls `SetUp()`.
-   - Runs the test body in `TestBody()`.
-   - Then `TearDown()` is invoked.
-6. The result is recorded and notifications sent to listeners.
-
-This automation means you focus on your test logic and GoogleTest handles organization and reporting.
+The test framework creates a fresh fixture instance for each test, ensuring isolation.
 
 ---
 
-## 7. Troubleshooting and Best Practices
+## Lifecycle of a Test
 
-- **Ensure Fixture Consistency:** Use the same fixture type within a suite to avoid runtime failures.
-- **Use `RUN_ALL_TESTS()` Return Value:** Always use the return value to detect test failures in your `main()`.
-- **Use Filters Wisely:** Combine filters with disabled tests and sharding cautiously to avoid unintentionally skipping tests.
-- **Handle Skips:** Use `GTEST_SKIP()` inside `SetUp()` or test bodies to conditionally skip tests.
-- **Leverage Event Listeners:** Customize output through listeners, but avoid generating failures inside listener callbacks.
+GoogleTest manages tests following an xUnit-inspired lifecycle, which you control through fixture classes.
+
+1. **Construction:** Create a new instance of the test fixture or test class.
+2. **Setup:** Execute `SetUp()` to prepare the environment.
+3. **Test Body:** Run the user-defined test code.
+4. **Teardown:** Execute `TearDown()` to release resources.
+5. **Destruction:** Destroy the test fixture instance.
+
+This lifecycle guarantees that tests do not interfere with each other, and resources are properly cleaned up.
+
+<Steps>
+<Step title="Test Fixture Setup">
+The framework calls `SetUp()` to initialize state or dependencies before each test.
+</Step>
+<Step title="Test Execution">
+Runs the body of your test that contains assertions and verification logic.
+</Step>
+<Step title="Test Fixture Teardown">
+Calls `TearDown()` to clean up resources or reset state.
+</Step>
+</Steps>
 
 ---
 
-## 8. Visualizing the Test Discovery and Execution Flow
+## Organizing Comprehensive Test Coverage
+
+### Group Related Tests
+
+Tests should be grouped logically by behavior or component, using suites to reflect production code structure. This makes tests easier to understand, maintain, and run selectively.
+
+### Use Setup and Fixtures to Share State
+
+Use shared setup to avoid duplication and ensure consistent test initialization.
+
+### Leverage Naming Conventions and Filtering
+
+Name your tests clearly to allow running subsets via GoogleTest’s `--gtest_filter` flag. For example:
+
+```bash
+test_binary --gtest_filter=MathTest.*
+```
+
+Runs all tests in the `MathTest` suite.
+
+### Run and Debug Tests Independently
+
+GoogleTest allows isolating and debugging single tests, speeding development and reducing flakiness.
+
+---
+
+## Test Execution Flow
+
+When running your tests, GoogleTest follows this user-centric flow:
+
+1. **Initialization:** Calls `testing::InitGoogleTest()` to prepare the framework, parse command-line flags, and register test metadata.
+2. **Test Enumeration:** Lists all discovered tests in suites, allowing filtering.
+3. **Execution:** Each test suite and its tests run one-by-one with fixture setup and teardown.
+4. **Result Aggregation:** Results from each test are collected.
+5. **Reporting:** Presents human-readable summary output and optionally machine-readable reports (XML/JSON).
+
+<Info>
+GoogleTest handles failures gracefully by isolating test failures without aborting the entire test run.
+</Info>
+
+---
+
+## How This Fits Into Your Testing Workflow
+
+By understanding the discovery and lifecycle:
+
+- You write tests without worrying about manual registration.
+- You can confidently share fixtures knowing each test is isolated.
+- You gain insight into how to group tests for clarity and effectiveness.
+- You can leverage GoogleTest’s command-line flags to run targeted tests, speeding up development and debugging.
+
+---
+
+## Practical Tips and Common Pitfalls
+
+- **Avoid Shared State Between Tests:** Each test runs with fresh fixtures; avoid static mutable state to keep tests independent.
+- **Use `SetUp()` and `TearDown()` Wisely:** Only perform necessary initialization and cleanup here to maintain performance.
+- **Filter Your Tests:** Use `--gtest_filter` to run only relevant tests during development.
+- **Keep Test Names Descriptive:** Clearly name suites and tests to reflect their purpose.
+- **Don’t Overload Tests:** One logical assertion per test results in better reporting.
+
+---
+
+## Diagram: GoogleTest Test Discovery and Lifecycle
 
 ```mermaid
 flowchart TD
-  subgraph Registration
-    TEST_MACRO["Invoke TEST / TEST_F macro"] --> CREATE_TESTINFO["Create TestInfo & Factory"]
-    CREATE_TESTINFO --> REGISTER["Register TestInfo with UnitTest singleton"]
+
+  subgraph "Test Registration"
+    A1["Define test with TEST()/TEST_F() macros"] --> A2["Static initialization registers test metadata"]
   end
 
-  subgraph Execution
-    RUN_ALL_TESTS["Call RUN_ALL_TESTS()"] --> INIT["InitGoogleTest() parses flags"]
-    INIT --> UNITTEST_RUN["UnitTest::Run()"]
-    UNITTEST_RUN --> SETUP_ENV["SetUp global test environments"]
-    SETUP_ENV --> FILTER["Filter tests by name and shard"]
-    FILTER --> SHUFFLE["Shuffle tests (if enabled)"]
-    SHUFFLE --> foreach_SUITE["For each TestSuite"]
-    foreach_SUITE --> SETUP_SUITE["Call SetUpTestSuite()"]
-    SETUP_SUITE --> foreach_TEST["For each TestInfo in suite"]
-    foreach_TEST --> RUN_TEST["Create Test Fixture"]
-    RUN_TEST --> CALL_SETUP["Call SetUp()"]
-    CALL_SETUP --> EXEC_BODY["Run TestBody() (test code)"]
-    EXEC_BODY --> CALL_TEARDOWN["Call TearDown()"]
-    CALL_TEARDOWN --> RECORD_RESULT["Record test result"]
-    RECORD_RESULT --> NOTIFY_LISTENERS["Notify event listeners"]
-    NOTIFY_LISTENERS --> [next test or] TEARDOWN_SUITE["Call TearDownTestSuite()"]
-    TEARDOWN_SUITE --> [next suite or] TEARDOWN_ENV["Tear down global test environments"]
-    TEARDOWN_ENV --> END_RUN["End test run"]
-    END_RUN --> REPORT["Generate console/XML/JSON report"]
+  A2 --> B1["testing::InitGoogleTest() parses flags & prepares registry"]
+  B1 --> B2["Framework enumerates all registered tests"]
+  B2 -->|Filter by name or suite| B3["Filtered test list"]
+
+  B3 --> C1["For each test suite"]
+  C1 --> C2["For each test in suite"]
+
+  subgraph "Test Execution Lifecycle"
+    C2 --> D1["Construct fixture/test instance"]
+    D1 --> D2["Call SetUp() for initialization"]
+    D2 --> D3["Run test body (assertions executed)"]
+    D3 --> D4["Call TearDown() to clean up"]
+    D4 --> D5["Destroy fixture/test instance"]
   end
 
-  style Registration fill:#f9f,stroke:#333,stroke-width:2px
-  style Execution fill:#bbf,stroke:#333,stroke-width:2px
+  D5 --> C2
+  C2 --> C1
+  C1 --> E1["Aggregate test results"]
+  E1 --> E2["Report results & exit"]
+
+  classDef important fill:#f9f,stroke:#333,stroke-width:2px;
+  class A2,B1,B2,C2,D3,E2 important;
 ```
 
 ---
 
-## 9. Additional Resources
+## Troubleshooting and FAQs
 
-- [Testing Reference](../reference/testing.md): Detailed macro and class documentation
-- [Advanced GoogleTest Topics](../advanced.md): In-depth lifecycle and advanced test writing
-- [Event Listeners Guide](guides/getting-started-testing/test-discovery-execution.mdx#event-listeners)
-- [Running Tests Guide](getting-started/first-steps/running-tests.mdx): Practical test execution patterns
-
----
-
-Empowered by this understanding, you are now equipped to harness the full power of GoogleTest's automatic test discovery and reliable execution. This knowledge ensures your tests are robust, well-managed, and deliver clear diagnostics.
-
----
-
-*Files referencing core classes:*
-- [googletest/include/gtest/gtest.h](https://github.com/google/googletest/blob/main/googletest/include/gtest/gtest.h)
-- [googletest/src/gtest.cc](https://github.com/google/googletest/blob/main/googletest/src/gtest.cc)
-- [googletest/test/googletest-list-tests-unittest_.cc](https://github.com/google/googletest/blob/main/googletest/test/googletest-list-tests-unittest_.cc)
-
----
-
-## Practical Example: Using `TEST` macro and Running Tests
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(MathTest, Addition) {
-  EXPECT_EQ(2 + 2, 4);
-}
-
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-Here, the macro `TEST` causes automatic static registration. Upon running,
-GoogleTest automatically discovers the test, runs it, and reports the result.
-
----
-
-## Troubleshooting Common Issues
-
-<AccordionGroup title="Common Pitfalls">
-<Accordion title="Tests Not Discovered or Run">
-Check if the `TEST` macros are used at global or namespace scope. Macros inside functions or class methods won't register.
-
-Ensure `RUN_ALL_TESTS()` is called in `main()` and its result is returned or used.
+<AccordionGroup title="Common Questions on Test Discovery and Lifecycle">
+<Accordion title="Why aren’t my tests being discovered?">
+Ensure that your tests use the `TEST()` or `TEST_F()` macros and that the test files are linked into the test executable. Also, confirm `testing::InitGoogleTest()` is called in your main program.
 </Accordion>
-
-<Accordion title="Fixture Misuse">
-Mixing `TEST` and `TEST_F` in the same suite is disallowed. Make sure test fixtures are consistent per test suite.
+<Accordion title="How does GoogleTest isolate tests?">
+GoogleTest creates a new instance of the test fixture class for each test, running `SetUp()` and `TearDown()` around every test. This ensures no state leaks between tests.
 </Accordion>
-
-<Accordion title="Filters Not Matching Expected Tests">
-Verify your `--gtest_filter` expressions. They are glob patterns applied to `TestSuite.TestName`. Remember that disabled tests are excluded without `--gtest_also_run_disabled_tests`.
+<Accordion title="Can I run a single test?">
+Yes. Use the `--gtest_filter=TestSuiteName.TestName` flag to run a specific test, enabling faster iteration.
 </Accordion>
-
-<Accordion title="Sharding Unexpectedly Skips Tests">
-Verify environment variables `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX`.
-
-Remember that the shard index must be less than total shards.
+<Accordion title="What if I want shared setup across multiple tests?">
+Use test fixtures (`TEST_F()`) and initialize common resources in `SetUp()`. Remember that each test still receives a fresh fixture instance.
 </Accordion>
 </AccordionGroup>
+
+---
+
+## Summary
+
+The Test Discovery and Lifecycle page reveals how GoogleTest automatically finds, registers, and executes your tests within a consistent lifecycle pattern. By using clear naming, fixtures, and test macros, GoogleTest empowers you to write reliable, maintainable C++ tests that run seamlessly across platforms with minimal setup overhead.
+
+For more details, explore the Primer for writing tests, the Mocking Reference for using mocks, and the Test Suite Configuration guide for running selective tests.
+
+---
+
+## Related Resources
+
+- [GoogleTest Primer: Writing Your First Test](https://google.github.io/googletest/primer.html)
+- [Mocking Basics with GoogleMock](https://google.github.io/googletest/gmock_for_dummies.html)
+- [Running and Configuring Tests](https://google.github.io/googletest/running_tests.html)
+- [Test Case & Assertion API Reference](https://google.github.io/googletest/reference/assertions.html)
+
+---
+
+## Next Steps
+
+- Write your first tests using `TEST()` and `TEST_F()`.
+- Use fixtures to share common test state.
+- Explore advanced test filtering and running strategies.
+- Integrate mocking to test components in isolation.
+
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/primer.md", "range": "1-242"}, {"path": "docs/reference/mocking.md", "range": "1-330"}]} />
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googlemock/test/gmock_output_test_.cc", "range": "1-226"}]} />
+
